@@ -139,3 +139,9 @@ td.center {
 #other-years select {
     margin-top: -2px;
 }
+
+a.widgetlink {
+    color: #fff;
+    font-weight: normal;
+    margin-right: 0.3em;
+}
